// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyMessage should render correctly 1`] = `
<Fragment>
  <p
    className="m-0"
  >
    <em
      className="h6"
    >
      Message
    </em>
  </p>
</Fragment>
`;

exports[`EmptyMessage should render with link correctly 1`] = `
<Fragment>
  <p
    className="m-0"
  >
    <em
      className="h6"
    >
      Message
    </em>
  </p>
  <Link
    to="/"
  >
    Link
  </Link>
</Fragment>
`;
